--- a/index.html
+++ b/index.html
@@ -752,7 +752,7 @@
 <section class="mainfooter">
  <footer id="footer">
   <div class="footer-top">
-    <div class="container">
+    <div class="container-fluid">
       <div class="row">
 
         <div class="col-lg-4 col-md-6 col-sm-12">
